--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,11 @@ repository = "https://github.com/untitaker/rust-webicon"
 
 [dependencies]
 kuchiki = "0.4.1"
-html5ever = "0.9.0"
-reqwest = "0.4"
+html5ever = "0.13.1"
+reqwest = "0.8"
 url = "1"
 error-chain = "0.9"
 image = "0.12"
-mime = "0.2"
+mime = "0.3"
+hyper = "0.11"
 html5ever-atoms = "0.1"
